--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-Django==1.6.5
-Pillow==2.4.0
-PyYAML==3.11
-amqp==1.0.6
-anyjson==0.3.3
-billiard==2.7.3.19
-biplist==0.9
-celery==3.0.12
+Django<1.7
+Pillow
+PyYAML
+amqp
+anyjson
+billiard
+biplist
+celery
 cybox==2.1.0.5
-defusedxml==0.4.1
-django-celery==3.0.11
+defusedxml
+django-celery
 django-tastypie==0.11.0
 django-tastypie-mongoengine==0.4.5
-importlib==1.0.3
-kombu==2.5.4
-lxml==3.4.2
+importlib
+kombu
+lxml
 mongoengine==0.8.7
-ordereddict==1.1
+ordereddict
 pydeep==0.2
 pymongo==2.7.2
-pyparsing==1.5.6
-python-dateutil==2.4.0
-python-ldap==2.4.15
+pyparsing
+python-dateutil
+python-ldap
 python-magic==0.4.6
-python-mimeparse==0.1.4
-pytz==2014.10
-requests==2.3.0
-simplejson==3.5.2
-six==1.9.0
+python-mimeparse
+pytz
+requests
+simplejson
+six
 stix==1.1.1.0
-ushlex==0.99
-wsgiref==0.1.2
+ushlex
+wsgiref
